--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "http-proxy-middleware": "^3.0.0",
     "next": "13.3.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
