--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "proxy": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
     "next": "13.3.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-native-validator-form": "^1.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
