--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-image-gallery": "^1.3.0",
     "react-native-validator-form": "^1.0.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
