--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "proxy": "node server.js"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
@@ -21,10 +22,12 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-native-validator-form": "^1.0.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
