--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
