--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "antd": "^5.18.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
