--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-native-validator-form": "^1.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0"
